@@ -1,3 +1,9 @@
+2008-07-19  Brian Pepple  <bpepple@fedoraproject.org>
+
+	* data/twitux.schemas.in:
+	* src/twitux.h:
+	* src/twitux-account-dialog.c: Add service combo to account dialog.
+
 2008-07-18  Brian Pepple  <bpepple@fedoraproject.org>
 
 	* configure.in:
